add: crud and email validation
